removed maven plugin and added spring-boot-maven-plugin